@@ -8,23 +8,20 @@ import dev.rafaelgalvezg.dailyprojectapi.model.Project;
 import dev.rafaelgalvezg.dailyprojectapi.model.ProjectTeam;
 import dev.rafaelgalvezg.dailyprojectapi.model.ProjectTeamId;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
 public class ProjectTeamDtoMapper {
-    private final ModelMapper modelMapper;
     private final ProjectDtoMapper projectMapper;
     private final CollaboratorDtoMapper collaboratorMapper;
 
     public ProjectTeamDto toDto(Project project, List<ProjectTeam> members) {
         ProjectDto projectDto = projectMapper.toDto(project);
-        List<MemberRoleDto> memberRoleDtos = members.stream().map(member -> new MemberRoleDto(collaboratorMapper.toDto(member.getCollaborator()), member.getRole())).collect(Collectors.toList());
-        return new ProjectTeamDto(projectDto, memberRoleDtos);
+        List<MemberRoleDto> memberRoles = members.stream().map(member -> new MemberRoleDto(collaboratorMapper.toDto(member.getCollaborator()), member.getRole())).toList();
+        return new ProjectTeamDto(projectDto, memberRoles);
     }
 
     public ProjectTeam toEntity(MemberRoleDto memberRoleDto, Project project, Collaborator collaborator) {
